--- a/ch03/3.6/3.6.md
+++ b/ch03/3.6/3.6.md
@@ -4,7 +4,8 @@
 
 Figure 3.19 in the exercises of Section 3.4 computes the failure
 function for the KMP algorithm. Show how, given that failure function, we
-can construct, from a keyword b1b2...bn an n + 1-state DFA that recognizes.*b1b2...bn, where the dot stands for "any character." Moreover, this DFA can
+can construct, from a keyword b1b2...bn an n + 1-state DFA that recognizes
+.*b1b2...bn, where the dot stands for "any character." Moreover, this DFA can
 be constructed in O(n) time.
 
 #### Answer
@@ -64,7 +65,8 @@ Repeat Exercise 3.6.3 for the NFA of Fig. 3.30.
 
 Give the transition tables for the NFA of: 
 
-1. Exercise 3.6.3.2. Exercise 3.6.4.
+1. Exercise 3.6.3.
+2. Exercise 3.6.4.
 3. Figure 3.26.
 
 #### Answer
@@ -164,7 +166,7 @@ Give the transition tables for the NFA of:
 			<td>0</td>
 			<td>∅</td>
 			<td>∅</td>
-			<td>{1,2}</td>
+			<td>{1,3}</td>
 		</tr>
 		<tr>
 			<td>1</td>
